--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,271 @@
-
-
-
+*{
+    box-sizing: border-box;
+}
+html{
+    scroll-behavior: smooth;
+}
 
 body{
     margin: 0;
-    background-color: rgb(211, 148, 125);
+    font-family: 'Montserrat', sans-serif;
+    color: black;
+}
+img{
+    max-width: 100%;
+}
+.conteiner{
+    max-width: 1140px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.none{
+    display: none !important;
 }
 
 .header-one {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     width: 100%;
     height: 100vh;
-    background-image: image("./../imagen");
+
+    /*background-image: url("./../imagen/heder/heder-1.jpg") ;*/
+    background-size: cover;
+    background-position: center;
+}
+
+.header-title{
+    margin: 0;
+    margin-bottom: 25px;
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 130%;
+    text-align: center;
+    color: rgb(255, 255, 255);    
+}
+
+.header-subtitle{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 130%;
+    text-align: center;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    color: rgb(255, 255, 255);   
+}
+
+.header-arrow{
+    width: 48px;
+    height: 48px;
+    position: absolute;
+    bottom: 0;
+    transform: translate(-50%,0);
+}
+
+/* Portfolio*/
+.portfolio {
+padding-top: 80px;
+padding-bottom: 115px;
+background-color: aliceblue;
+}
+.portfolio-header{ 
+    margin: 0;
+    margin-bottom: 70px;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 130%;
+    text-align: center;
+    color: black;
 
 }
-.header-title{
-    
+.portfolio-cards-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
-.header-subtitle{
-    
+.card{
+    margin-bottom: 30px;
+    background-color: aliceblue;
+    max-width: 540px;
+    box-shadow: 0px 10px 40px rgb(31, 29, 25);
+    transition: transform 0.2s ease-in-out;
+}
+.card:hover{
+    transform: translateY(15px);
+}
+.card-link{
+    padding: 20px;
+    color: #000;
+    display: block;
+    text-decoration: none;
+}
+.card-link:hover{
+    color: blue;
+}
+
+.card:last-child, .card:nth-last-child(2)  {
+    margin-bottom: 0;
+}
+
+.card-title{
+    margin: 0;
+    margin-top: 20px;
+    margin-bottom: 13px;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 130%;
+}
+.card p {
+    margin: 0;
+    font-size: 16px;
+    line-height: 130%;
+}
+
+/* Footer */
+
+.footer {
+    margin: 0;
+    background: #1e4776;
+    padding-top: 46px;
+    padding-bottom: 130px;
+    color: white;
+
+}
+
+.footer-row{
+    display: flex;
+    flex-direction: row;
+    justify-content:  space-between;
+}
+
+.footer-col{
+    max-width: 350px;
+    flex-grow: 1;
+}
+
+.footer-copyright{
+    color: #7E7E9Ec9;
+    line-height: 1.3;
+}
+
+.footer-copyright-name{
+    font-weight: 700;
+    font-size: 28px;
+}
+
+.footer-copyright p {
+    font-weight: 600;
+    font-size: 16px;
+}
+
+
+.footer-icons-row{
+    display: flex;
+    align-items: center;
+}
+
+.footer-icons p{
+    margin: 0;
+    margin-bottom: 15px;
+    font-weight: 600;
+    font-size: 16px;
+}
+
+.footer-icons-row > * + * {
+    margin-left: 30px;
+}
+
+
+.footer-button{
+    display: inline-block;
+    border: 3px solid white ;
+    border-radius: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
+    color: white;
+    line-height: 44px;
+
+    font-weight: 700;
+    font-size: 16px;
+    text-transform: uppercase;
+    text-decoration: none;
+    transition: all ease-in-out;
+}
+.footer-button:hover{
+    color: #1e4776;
+    background-color: white;
+}
+
+.footer-contacs p{
+    margin: 15px 0;
+    font-size: 16px;
+    line-height: 1.3;
+    color: #7E7E9Ec9;
+
+}
+
+/* Two page */
+
+.project {
+    padding-top: 80px;
+    padding-bottom: 80px;
+    margin: 0;
+    text-align: center;
+    background: white;
+}
+
+.project-header{
+    margin: 0;
+    margin-bottom: 40px;
+    padding: 20px;
+    font-size: 46px;
+    line-height: 1.3;
+}
+
+.project-image{
+    background-color: #000;
+    margin: auto;
+    box-shadow: 60px -60px 800px rgb(62, 11, 109);
+    width: fit-content;
+    margin-bottom: 40px;
+}
+
+
+.project-disc{
+    margin: 70px auto 60px;
+    max-width: 730px;
+}
+
+.project-disc p{
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 15px;
+
+}
+
+.project-button-one{
+    display: inline-block;
+    border: 3px solid #1e4776 ;
+    border-radius: 60px;
+    padding-left: 30px;
+    padding-right: 30px;
+    color: #1e4776;
+    line-height: 54px;
+
+    font-weight: 700;
+    font-size: 16px;
+    text-transform: uppercase;
+    text-decoration: none;
+    transition: all ease-in;
+}
+
+.project-button-one:hover{
+    color: white;
+    background-color: #1e4776;
 }
